@@ -1,6 +1,7 @@
 1.1.1
 -----
 1. Fix menu icon missing from grid items.
+2. If keyboard shortcuts are disabled, dont prevent the event from propogating.
 
 1.1.0
 -----
